<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_metodology"
        android:title="@string/action_metodology"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_club"
        android:title="@string/action_club"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_team"
        android:title="@string/action_team"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_partners"
        android:title="@string/action_partners"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_bug"
        android:title="@string/action_bug"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_mail"
        android:title="@string/action_mail"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_rate"
        android:title="@string/action_rate"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_fb"
        android:title="@string/action_fb"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_twitter"
        android:title="@string/action_twitter"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
