<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/pola_gray"
              android:gravity="center"
              android:orientation="vertical">

    <EditText
        android:id="@+id/keyboard_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/keyboard_input_hint"
        android:inputType="number"
        android:maxLines="1"
        android:minWidth="248dp"
        android:textAppearance="?android:textAppearanceLargeInverse"
        android:textIsSelectable="true"
        android:textSize="36sp"
        tools:text="12345678901234"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <pl.pola_app.ui.keyboard.KeyboardButton
            android:id="@+id/key_1"
            style="@style/key_border"
            android:text="@string/button_1"/>

        <pl.pola_app.ui.keyboard.KeyboardButton
            android:id="@+id/key_2"
            style="@style/key_border"
            android:text="@string/button_2"/>

        <pl.pola_app.ui.keyboard.KeyboardButton
            android:id="@+id/key_3"
            style="@style/key_border"
            android:text="@string/button_3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <pl.pola_app.ui.keyboard.KeyboardButton
            android:id="@+id/key_4"
            style="@style/key_border"
            android:text="@string/button_4"/>

        <pl.pola_app.ui.keyboard.KeyboardButton
            android:id="@+id/key_5"
            style="@style/key_border"
            android:text="@string/button_5"/>

        <pl.pola_app.ui.keyboard.KeyboardButton
            android:id="@+id/key_6"
            style="@style/key_border"
            android:text="@string/button_6"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <pl.pola_app.ui.keyboard.KeyboardButton
            android:id="@+id/key_7"
            style="@style/key_border"
            android:text="@string/button_7"/>

        <pl.pola_app.ui.keyboard.KeyboardButton
            android:id="@+id/key_8"
            style="@style/key_border"
            android:text="@string/button_8"/>

        <pl.pola_app.ui.keyboard.KeyboardButton
            android:id="@+id/key_9"
            style="@style/key_border"
            android:text="@string/button_9"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <FrameLayout
            android:id="@+id/key_backspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/backspace_content_description"
                app:srcCompat="@drawable/ic_backspace_36"/>

            <pl.pola_app.ui.keyboard.KeyboardButton style="@style/key_border"/>
        </FrameLayout>

        <pl.pola_app.ui.keyboard.KeyboardButton
            android:id="@+id/key_0"
            style="@style/key_border"
            android:text="@string/button_0"/>

        <FrameLayout
            android:id="@+id/key_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/done_content_description"
                android:src="@drawable/ic_done_white_36dp"/>

            <pl.pola_app.ui.keyboard.KeyboardButton style="@style/key_border"/>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
