<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/info" />

        <ScrollView
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activity_menu_about_app_tv"
                    style="@style/MenuTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_about" />

                <TextView
                    android:id="@+id/activity_menu_user_manual_tv"
                    style="@style/MenuTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_metodology" />

                <TextView
                    android:id="@+id/activity_menu_about_kj_tv"
                    style="@style/MenuTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_club" />

                <TextView
                    android:id="@+id/activity_menu_team_tv"
                    style="@style/MenuTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_team" />

                <TextView
                    android:id="@+id/activity_menu_partners_tv"
                    style="@style/MenuTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_partners" />

                <TextView
                    android:id="@+id/activity_menu_friends_tv"
                    style="@style/MenuTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_friends" />

                <TextView
                    android:id="@+id/activity_found_bug_tv"
                    style="@style/MenuTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_bug" />

                <TextView
                    android:id="@+id/activity_rate_tv"
                    style="@style/MenuTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_rate" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/activity_facebook_tv"
                        style="@style/MenuTextViewSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/menu_margin"
                        android:layout_marginEnd="10dp"
                        android:layout_weight=".5"
                        android:text="@string/action_fb" />

                    <TextView
                        android:id="@+id/activity_twitter_tv"
                        style="@style/MenuTextViewSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="@dimen/menu_margin"
                        android:layout_weight=".5"
                        android:text="@string/action_twitter" />

                </LinearLayout>

                <TextView
                    android:id="@+id/appBuildTv"
                    style="@style/TextViewAppBuild"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>