<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/rounded_white_rectangle"
    android:paddingTop="@dimen/dialog_vertical_padding"
    android:paddingBottom="@dimen/dialog_vertical_padding"
    android:paddingLeft="@dimen/dialog_horizontal_padding"
    android:paddingStart="@dimen/dialog_horizontal_padding"
    android:paddingEnd="@dimen/dialog_horizontal_padding"
    android:paddingRight="@dimen/dialog_horizontal_padding"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/help_dialog_title" />

    <TextView
        android:layout_width="match_parent"
        android:paddingTop="24dp"
        android:paddingBottom="32dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/help_dialog_msg" />

    <Button
        android:id="@+id/help_dialog_want_to_help_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/card_type_white_bk"
        android:backgroundTint="#d8002f"
        android:text="@string/want_to_help_button_label" />

    <Button
        android:id="@+id/help_dialog_next_time_button"
        android:textColor="@android:color/black"
        android:background="?selectableItemBackground"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_time_button_label" />
</LinearLayout>